# tech_prog

./: step.sh
2_homework/: CMakeCache.txt  CMakeLists.txt  Makefile  bot  cmake_install.cmake
2_homework/A/: preparing.py
2_homework/B/: CMakeLists.txt  Makefile  cmake_install.cmake
2_homework/C/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  main.h  my.sh
2_homework/C/gg/: CMakeCache.txt  Makefile  bot  cmake_install.cmake
