cmake_minimum_required(VERSION 2.8)
project(bot)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
include_directories(.)
set(SOURCES_LIST1 C/main.cpp)
set(SOURCES_LIST2 C/main.h)
add_executable(bot ${SOURCES_LIST1} ${SOURCES_LIST2})
add_subdirectory("B")
target_link_libraries(bot lib)
execute_process(COMMAND python3 preparing.py WORKING_DIRECTORY A)
